# SDKPython

./: .bumpversion.cfg  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  driver.py  labellerr_integration_case_tests.py  labellerr_use_case_tests.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml  claude-code-review.yml  release.yml
labellerr/: __init__.py  async_client.py  client.py  client_utils.py  config.py  connector.py  constants.py  exceptions.py  gcs.py  schemas.py  utils.py  validators.py
labellerr/Python_SDK/: .gitignore
labellerr/Python_SDK/services/video_sampling/: .gitignore  gemini.py  pyscene_detect.py  requirements.txt
labellerr/Python_SDK/utils/: client_utils.py
labellerr/base/: singleton.py
labellerr/core/: __init__.py  async_client.py  client.py  client_utils.py  constants.py  gcs.py  schemas.py
labellerr/core/autolabel/: __init__.py  base.py  typings.py
labellerr/core/base/: connectors.py
labellerr/core/connectors/: __init__.py  connections.py  gcs.py  gcs_connection.py  s3_connection.py
labellerr/core/datasets/: __init__.py  audio_dataset.py  base.py  datasets.py  document_dataset.py  image_dataset.py  utils.py  video_dataset.py
labellerr/core/exceptions/: __init__.py
labellerr/core/files/: __init__.py  base.py  image_file.py  video_file.py
labellerr/core/projects/: __init__.py  audio_project.py  base.py  document_project.py  image_project.py  utils.py  video_project.py
labellerr/core/projects/validators/: __init__.py
labellerr/core/typings/: __init__.py
labellerr/core/users/: __init__.py  base.py
labellerr/core/utils/: __init__.py
labellerr/core/validators/: __init__.py
labellerr/notebooks/: SDK.ipynb
labellerr/services/autolabel/: __init__.py
labellerr/services/labellerr_files/: client_utils.py
labellerr/services/video_sampling/: __init__.py  ffmpeg.py  gemini.py  pyscene_detect.py  requirements.txt  ssim.py
tests/: README.md  conftest.py  test_client.py  test_keyframes.py  test_keyframes_integration.py
tests/integration/: .gitignore  Create_Project.py  Export_project.py  Pre_annotation_uploading.py  bulk_assign_operations.py  conftest.py  cred.py  main.py  sync_datasets_operations.py  test_labellerr_integration.py  test_sync_datasets.py
tests/unit/: test_client.py  test_create_dataset_path.py  test_dataset_pagination.py  test_keyframes.py
